cabal-version:      2.4
name:               binary-analysis
version:            0.1.0.0
synopsis:
    Meta-project for binary analysis tools

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Matichuk
maintainer:         dmatichuk@galois.com

-- A copyright notice.
-- copyright:
category:           Verification
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        aeson >= 2,
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        Glob,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        parameterized-utils >= 2 && < 3,
        parser-combinators >= 1.2 && < 1.4,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        yaml >= 0.11 && < 0.12,
        text,
        binary-symbols,
        language-c,
        indexed-traversable,
        utf8-string,
        nonempty-vector,
        vector,
        multiset,
        IntervalMap >= 0.6.2.1 && < 0.7,
        split,
        temporary


library
    import: shared

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    time,
                      elf-edit,
                      macaw-base,
                      macaw-symbolic,
                      macaw-loader,
                      macaw-loader-x86,
                      macaw-loader-aarch32,
                      directory,
                      file-embed,
                      flexdis86,
                      macaw-x86,
                      macaw-x86-symbolic,
                      asl-translator,
                      macaw-aarch32,
                      macaw-aarch32-symbolic,
                      crucible,
                      crucible-llvm,
                      crucible-symio,
                      crucible-syntax,
                      what4,
                      macaw-ppc,
                      macaw-ppc-symbolic,
                      renovate,
                      renovate-ppc,
                      renovate-aarch32,
                      renovate-x86,
                      refurbish
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat
